# ros2_ws

./: README.md  file.csv
block1_izmailov/: CMakeLists.txt  package.xml
block1_izmailov/include/block1_izmailov/: logger_node.hpp  save_state.hpp
block1_izmailov/launch/: main_launch.xml
block1_izmailov/src/: logger_node.cpp  move_to_points_node.cpp  save_state.cpp  teleop_node.cpp
block2_izmailov/: CMakeLists.txt  package.xml
block2_izmailov/env/: pyvenv.cfg
block2_izmailov/include/block2_izmailov/: constants.hpp  trajectory_visualization.hpp
block2_izmailov/launch/: ik_trajectory_visualization.launch.py  trajectory_visualization.launch.py  trajectory_visualization.launch.xml
block2_izmailov/results/: joint1.txt  joint2.txt  joint3.txt  joint4.txt  joint5.txt  joint6.txt  klb_0.txt  klb_2.txt  rx.txt  ry.txt  rz.txt  x.txt  y.txt  z.txt
block2_izmailov/scripts/: draw_graphs.py  draw_tool_graphs.py
block2_izmailov/src/: data.csv  ik_data.csv  ik_trajectory_visualization.cpp  trajectory_computation.cpp  trajectory_visualization.cpp  trajectory_visualization_client.cpp
cv1/: CMakeLists.txt  package.xml
cv1/src/: cv1_node.cpp
src/ik_solver_example/src/: ik_solver_example.cpp
src/izmailov_interface/: CMakeLists.txt  package.xml
src/izmailov_interface/srv/: MoveToPoints.srv  SaveState.srv
src/rrm_sim/src/: robot_sim_node.cpp
src/rrm_simple_robot_model/urdf/: arm.urdf
src/trajectory_interface/: CMakeLists.txt  package.xml
src/trajectory_interface/srv/: ComputeTrajectory.srv
src/trajectory_visualization/src/: trajectory_visualization.cpp
